--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
                         世新大學 資訊傳播學系 學生
                         <a href="mailto:name@email.com">信箱：jessica40817@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+                    <p class="lead mb-5">大家好，我是施沛綺，目前就讀世新大學資訊傳播學系一年級。
+                        平時喜歡畫圖平時喜歡畫圖，聽音樂，彈鋼琴。
+                    </p>
                     <div class="social-icons">
                         <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
